--- a/Practical_1/index.html
+++ b/Practical_1/index.html
@@ -28,13 +28,13 @@
                          <button>Submit</button>
                     </form>
                </div>
-               <div>
+               <div class="paginator">
                     <span id="question-id">1</span> of 10
                </div>
           </div>
           <div class="right-panel">
                <img src="./images/learning girl.png" alt="Learner">
-               <div>
+               <div class="score-card">
                     <h2>Score</h2>
                     <p class="correct">Correct: </p>
                     <p class="incorrect">Incorrect:</p>
