Template modified and styling added for practical 2

--- a/Practical_2/index.html
+++ b/Practical_2/index.html
@@ -12,15 +12,17 @@
 </head>
 <body>
      <header>
-          <div>
-               <h2>HomeMade Products</h2>
+          <div class="site-name">
+               <p>HomeMade Products</p>
           </div>
-          <div class="search-bar">
-               <input type="text" placeholder="Search here">
-               <button><i class="fa fa-search" aria-hidden="true"></i></button>
+          <div>
+               <div class="search-bar">
+                    <input type="text" placeholder="Search here">
+                    <button><i class="fa fa-search" aria-hidden="true"></i></button>
+               </div>
           </div>
           <div class="user-info">
-               <div><i class="fa fa-user"></i></div>
+               <div class="user-image"><i class="fa fa-user"></i></div>
                <div>
                     <div>username <i class="fa fa-sort-desc" aria-hidden="true"></i></div>
                </div>
@@ -28,36 +30,41 @@
      </header>
      <nav>
           <div>Home</div>
-          <div>Products</div>
+          <div>Products <i class="fa fa-sort-desc" aria-hidden="true"></i></div>
           <div>About Us</div>
           <div>Contact Us</div>
      </nav>
 
      <section>
+          <div class="circle"></div>
          <div class="products">
-               <div class="product-card">
-                    <img src="" alt="Image">
-                    <div><h3>Paper Craft</h3></div>
+               <div>
+                    <div class="product-card">
+                         <div><img src="./images/paper craft.jpg" alt="Image"></div>
+                         <div class="product-name"><h3>Paper Craft</h3></div>
+                    </div>
+                    <div class="product-card">
+                         <div><img src="./images/food.jpg" alt="Image"></div>
+                         <div class="product-name"><h3>Paper Craft</h3></div>
+                    </div>
+                    <div class="product-card">
+                         <div><img src="./images/beauty products.jpg" alt="Image"></div>
+                         <div class="product-name"><h3>Paper Craft</h3></div>
+                    </div>                    
                </div>
-               <div class="product-card">
-                    <img src="" alt="Image">
-                    <div><h3>Paper Craft</h3></div>
-               </div>
-               <div class="product-card">
-                    <img src="" alt="Image">
-                    <div><h3>Paper Craft</h3></div>
-               </div>
-               <div class="product-card">
-                    <img src="" alt="Image">
-                    <div><h3>Paper Craft</h3></div>
-               </div>
-               <div class="product-card">
-                    <img src="" alt="Image">
-                    <div><h3>Paper Craft</h3></div>
-               </div>
-               <div class="product-card">
-                    <img src="" alt="Image">
-                    <div><h3>Paper Craft</h3></div>
+               <div>
+                    <div class="product-card">
+                         <div><img src="./images/craft.jpg" alt="Image"></div>
+                         <div class="product-name"><h3>Paper Craft</h3></div>
+                    </div>
+                    <div class="product-card">
+                         <div><img src="./images/cloths.jpg" alt="Image"></div>
+                         <div class="product-name"><h3>Paper Craft</h3></div>
+                    </div>
+                    <div class="product-card">
+                         <div><img src="./images/hanging craft.jpg" alt="Image"></div>
+                         <div class="product-name"><h3>Paper Craft</h3></div>
+                    </div>                    
                </div>
          </div> 
      </section>
